<resources>
    <string name="app_name">Detector</string>
    <string name="Item">настройка 1</string>
    <string name="Item2">настройка 2</string>
    <string name="backButton">Назад</string>
    <string name="about_title">About</string>
    <string name="settingsButton">Настройки</string>
    <string name="startButton">Старт</string>
    <string name="stopButton">Стоп</string>
    <string name="newWorkButton">Нов.</string>
    <string name="voldDim">мВ</string>
    <string name="capacityDim">мкФ</string>
    <string name="tempDime">К</string>
    <string name="settings_Detc_Options">Параметры датчика:</string>
    <string name="settings_Detc_name">Название:</string>
    <string name="settings_Save_button">СОХРАНИТЬ</string>
    <string name="isConnected">подключено.</string>
    <string name="refreshing">обновление</string>
</resources>
