<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ru.neooffline.mephi.detector.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="-32dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="Uсм.: "
                android:textAlignment="viewStart"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/uDat_var"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="0"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/uDat_det"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="@string/voldDim"
                android:textAlignment="viewStart"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="C дат:"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/cDat_var"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="0"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/cDat_det"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="@string/capacityDim"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tDat"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="Tдат.: "
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tDat_var"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="0"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tempDim"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="left"
                android:text="@string/tempDime"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/tempDim"
                android:cursorVisible="false"
                android:textAlignment="viewStart"
                android:textColorLink="@android:color/holo_red_dark" />
        </TableRow>

    </TableLayout>

    <ToggleButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="clack"
        android:text="@string/startButton"
        android:textOff="@string/startButton"
        android:textOn="@string/stopButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/radio1"
        android:layout_marginBottom="32dp"
        android:onClick="calc"
        android:text="@string/startButton" />

    <Button
        android:id="@+id/setingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:onClick="callSettingsActivity"
        android:text="@string/settingsButton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_alignParentEnd="true"
        android:includeFontPadding="false"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:onClick="callAboutActivity"
        android:text="Button" />

    <TextView
        android:id="@+id/numDat_var"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/radio1"
        android:text="0" />

    <TextView
        android:id="@+id/dateDat_var"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/setingsButton"
        android:layout_toEndOf="@+id/numDat_var"
        android:text="Дата и время" />

    <Button
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentEnd="true"
        android:onClick="callSerialConsole"
        android:text="SerialConsole" />

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button5"
        android:layout_alignParentEnd="true"
        android:text="@string/newWorkButton" />

</RelativeLayout>
