<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="450dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_Detc_Options"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="450dp"
        android:layout_height="183dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <TableRow
            android:layout_width="450dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_Detc_name"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="450dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:text="Т дат.:"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="450dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="U см.:"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

        </TableRow>

        <TableRow
            android:layout_width="450dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C ref.:"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="24dp"
        android:onClick="backToMain2"
        android:text="@string/settings_Save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</android.support.constraint.ConstraintLayout>